--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "slick-carousel",
+  "name": "slicker",
   "version": "1.3.6",
   "description": "the last carousel you'll ever need",
   "main": "slick/slick.js",
