--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "main": "index.js",
     "dependencies": {
       "jquery": "1.8.3"
-    }
+    },
+    "buildArgs": "--ignore jquery"
   }
 }
